update backgorund issue on ios

--- a/src/components/BackgroundVideo.module.scss
+++ b/src/components/BackgroundVideo.module.scss
@@ -20,7 +20,7 @@
         top: 0px;
         left: 0;
         width: 100%;
-        height: 70%;
+        height: 70vh;
         overflow: hidden;
         z-index: 0;
 
